--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,10 @@
-<h1>Display your Pirate here</h1>
-
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h1>Pirate</h1>
+<p> Name: <%= @pirate.name %></p><br>
+<p> Height: <%= @pirate.height %></p><br>
+<p> Weight: <%= @pirate.weight %></p><br>
+ <h2>Ships</h2>
+  <% @ships.each do |ship| %>
+    <p>Name: <%= ship.name %></p><br>
+    <p>Type: <%= ship.type %></p><br>
+    <p>Booty: <%= ship.booty %></p><br>
+    <% end %>
